@@ -1,3 +1,9 @@
+2021-06-01  John Baldwin  <jhb@FreeBSD.org>
+
+	* infrun.c (handle_inferior_event): Only call
+	gdbarch_displaced_step_restore_all_in_ptid if
+	gdbarch_supports_displaced_stepping is true.
+
 2021-06-01  Tom Tromey  <tromey@adacore.com>
 
 	* Makefile.in (all-data-directory): Remove.
